修改接口文档

--- a/接口文档.md
+++ b/接口文档.md
@@ -103,18 +103,15 @@ HTTP请求方式
 
 请求参数
 
-> | 参数     | 必选 | 类型   | 说明             |
-> | :------- | :--- | :----- | ---------------- |
-> | number   | ture | String | 用于登录的学工号 |
-> | password | true | String | 密码             |
+> | 参数  | 必选 | 类型   |        说明        |
+> | :---- | :--- | :----- | :----------------: |
+> | token | ture | String | 之前用于登录的令牌 |
 
 **成功登录**返回字段中data
 
-> | 返回字段  | 字段类型 | 说明           |
-> | :-------- | :------- | :------------- |
-> | number    | String   | 学工号         |
-> | token     | String   | 登录令牌       |
-> | initLogin | boolean  | 是否第一次登录 |
+> | 返回字段 | 字段类型 | 说明   |
+> | :------- | :------- | :----- |
+> | data     | String   | 学工号 |
 
 接口示例
 
@@ -122,56 +119,7 @@ HTTP请求方式
 {
     "code" : 200,
     "msg" : "succ",
-    "data":{
-        "number": "20302010",
-    	"token": "hfsdfdsjkafjdkafj.hdjkhsal.fhasofadj",
-        "initLogin":true
-    }
-    
-}
-```
-
-#### 1.2注册
-
-接口功能
-
-> 修改密码
-
-URL
-
-> /user/login
-
-HTTP请求方式
-
-> POST
-
-请求参数
-
-> | 参数     | 必选 | 类型   | 说明             |
-> | :------- | :--- | :----- | ---------------- |
-> | number   | ture | String | 用于登录的学工号 |
-> | password | true | String | 密码             |
-
-**成功登录**返回字段中data
-
-> | 返回字段  | 字段类型 | 说明           |
-> | :-------- | :------- | :------------- |
-> | number    | String   | 学工号         |
-> | token     | String   | 登录令牌       |
-> | initLogin | boolean  | 是否第一次登录 |
-
-接口示例
-
-``` javascript
-{
-    "code" : 200,
-    "msg" : "succ",
-    "data":{
-        "number": "20302010",
-    	"token": "hfsdfdsjkafjdkafj.hdjkhsal.fhasofadj",
-        "initLogin":true
-    }
-    
+    "data": "hfsdfdsjkafjdkafj.hdjkhsal.fhasofadj"
 }
 ```
 
