完善接口文档

--- a/接口文档.md
+++ b/接口文档.md
@@ -87,7 +87,7 @@ HTTP请求方式
 }
 ```
 
-#### 1.2登出
+#### 1.3登出
 
 接口功能
 
@@ -121,5 +121,47 @@ HTTP请求方式
     "msg" : "succ",
     "data": "hfsdfdsjkafjdkafj.hdjkhsal.fhasofadj"
 }
+```
+
+#### 1.4注册
+
+接口功能
+
+> 修改密码
+
+URL
+
+> /user/logout
+
+HTTP请求方式
+
+> POST
+
+请求参数
+
+> | 参数     | 必选  | 类型   |  说明  |
+> | :------- | :---- | :----- | :----: |
+> | numer    | ture  | String | 学工号 |
+> | name     | true  | String |  姓名  |
+> | password | true  | String |  密码  |
+> | idNum    | true  | String | 身份证 |
+> | phoneNum | false | String | 手机号 |
+> | email    | false | String |  邮箱  |
+> | role     | true  | String |  身份  |
+> | school   | true  | String |  院系  |
+> | major    | true  | String |  专业  |
+
+**成功登录**返回字段中data
+
+> | 返回字段 | 字段类型 | 说明   |
+> | :------- | :------- | :----- |
+> | number   | String   | 学工号 |
+> | name     | String   | 姓名   |
+> | role     | String   | 身份   |
+
+接口示例
+
+``` javascript
+
 ```
 
