接口文档完善

--- a/接口文档.md
+++ b/接口文档.md
@@ -1,6 +1,6 @@
 # 接口文档
 
-### 1.登录登出注册
+## 1.登录登出注册
 
 #### **1.1登录**
 
@@ -164,4 +164,215 @@ HTTP请求方式
 ``` javascript
 
 ```
+
+## 2.学生的操作
+
+#### 2.1获得基础个人信息
+
+接口功能
+
+> 获得学生除密码和身份外的大部分信息
+
+URL
+
+> /student/infomation
+
+HTTP请求方式
+
+> POST
+
+请求参数
+
+注意携带好token
+
+> | 参数  | 必选 | 类型   |  说明  |
+> | :---- | :--- | :----- | :----: |
+> | numer | ture | String | 学工号 |
+
+**成功登录**返回字段中data
+
+> | 返回字段 | 字段类型 | 说明             |
+> | :------- | :------- | :--------------- |
+> | open     | String   | 表示选课是否开放 |
+
+接口示例
+
+``` javascript
+
+```
+
+#### 2.2维护基础个人信息
+
+接口功能
+
+> 修改部分个人信息
+
+URL
+
+> /student/maintainInfo
+
+HTTP请求方式
+
+> POST
+
+请求参数
+
+注意携带好token
+
+> | 参数     | 必选 | 类型   |  说明  |
+> | :------- | :--- | :----- | :----: |
+> | numer    | ture | String | 学工号 |
+> | phoneNum | ture | String | 手机号 |
+> | email    | ture | String |  邮箱  |
+
+**成功登录**返回字段中data
+
+> | 返回字段 | 字段类型 | 说明     |
+> | :------- | :------- | :------- |
+> | number   | String   | 学工号   |
+> | name     | String   | 姓名     |
+> | role     | String   | 身份     |
+> | idNum    | String   | 身份证   |
+> | phoneNum | String   | 电话号码 |
+> | email    | String   | 邮箱     |
+> | school   | String   | 院系     |
+> | major    | String   | 专业     |
+
+接口示例
+
+``` javascript
+
+```
+
+#### 2.2询问选课是否开放
+
+接口功能
+
+> 询问选课是否开放
+
+URL
+
+> /student/askForLec
+
+HTTP请求方式
+
+> POST
+
+请求参数
+
+注意携带好token
+
+> | 参数  | 必选 | 类型   |  说明  |
+> | :---- | :--- | :----- | :----: |
+> | numer | ture | String | 学工号 |
+
+**成功登录**返回字段中data
+
+> | 返回字段 | 字段类型 | 说明         |
+> | :------- | :------- | :----------- |
+> | open     | String   | 选课是否开放 |
+
+接口示例
+
+``` javascript
+{
+    "code" : 200,
+    "msg" : "succ",
+    "data":{
+        "open": "true",
+    }
+}
+```
+
+#### 2.2获得可选课程
+
+接口功能
+
+> 获取本专业的可选课程
+
+URL
+
+> /student/askFor
+
+HTTP请求方式
+
+> POST
+
+请求参数
+
+注意携带好token
+
+> | 参数  | 必选 | 类型   |  说明  |
+> | :---- | :--- | :----- | :----: |
+> | numer | ture | String | 学工号 |
+
+**成功登录**返回字段中data
+
+> | 返回字段 | 字段类型 | 说明         |
+> | :------- | :------- | :----------- |
+> | open     | String   | 选课是否开放 |
+> |          |          |              |
+
+接口示例
+
+``` javascript
+{
+    "code" : 200,
+    "msg" : "succ",
+    "data":{
+        "open": "true",
+    }
+}
+```
+
+## 3.老师的操作
+
+
+
+
+
+## 4.管理员的操作
+
+#### 4.1获得所有的专业和院系(下拉框使用)
+
+接口功能
+
+> 获取本专业的可选课程
+
+URL
+
+> /student/askFor
+
+HTTP请求方式
+
+> POST
+
+请求参数
+
+注意携带好token
+
+> | 参数  | 必选 | 类型   |  说明  |
+> | :---- | :--- | :----- | :----: |
+> | numer | ture | String | 学工号 |
+
+**成功登录**返回字段中data
+
+> | 返回字段 | 字段类型 | 说明         |
+> | :------- | :------- | :----------- |
+> | open     | String   | 选课是否开放 |
+> |          |          |              |
+
+接口示例
+
+``` javascript
+{
+    "code" : 200,
+    "msg" : "succ",
+    "data":{
+        "open": "true",
+    }
+}
+```
+
+
 
