功能新增：获得学生基本信息

--- a/接口文档.md
+++ b/接口文档.md
@@ -193,7 +193,13 @@ HTTP请求方式
 
 > | 返回字段 | 字段类型 | 说明             |
 > | :------- | :------- | :--------------- |
-> | open     | String   | 表示选课是否开放 |
+> | number   | String   | 表示选课是否开放 |
+> | name     | String   |                  |
+> | idNum    |          |                  |
+> | phoneNum |          |                  |
+> | email    |          |                  |
+> | school   |          |                  |
+> | major    |          |                  |
 
 接口示例
 
@@ -244,7 +250,7 @@ HTTP请求方式
 
 ```
 
-#### 2.2询问选课是否开放
+#### 2.3询问选课是否开放
 
 接口功能
 
@@ -284,7 +290,7 @@ HTTP请求方式
 }
 ```
 
-#### 2.2获得可选课程
+#### 2.4获得可选课程
 
 接口功能
 
@@ -324,6 +330,52 @@ HTTP请求方式
     }
 }
 ```
+
+#### 2.5修改密码
+
+接口功能
+
+> 修改密码
+
+URL
+
+> /student/changePassword
+
+HTTP请求方式
+
+> POST
+
+请求参数
+
+注意携带好token
+
+> | 参数        | 必选 | 类型   |  说明  |
+> | :---------- | :--- | :----- | :----: |
+> | numer       | ture | String | 学工号 |
+> | oldPassword | true | String |        |
+> | newPassword | true | String |        |
+
+**成功登录**返回字段中data
+
+> | 返回字段 | 字段类型 | 说明 |
+> | :------- | :------- | :--- |
+> | number   | 无       | 无   |
+
+接口示例
+
+``` javascript
+{
+    "code" : 200,
+    "msg" : "succ",
+    "data": null
+}
+```
+
+
+
+
+
+
 
 ## 3.老师的操作
 
