完善接口文档

--- a/接口文档.md
+++ b/接口文档.md
@@ -426,5 +426,133 @@ HTTP请求方式
 }
 ```
 
+#### 4.2新增专业
+
+接口功能
+
+> 获取本专业的可选课程
+
+URL
+
+> /student/addMajor
+
+HTTP请求方式
+
+> POST
+
+请求参数
+
+注意携带好token
+
+> | 参数         | 必选 | 类型   |  说明  |
+> | :----------- | :--- | :----- | :----: |
+> | majorName    | ture | String | 学工号 |
+> | schoolName   |      |        |        |
+> | introduction |      |        |        |
+
+**成功登录**返回字段中data
+
+> | 返回字段  | 字段类型 | 说明         |
+> | :-------- | :------- | :----------- |
+> | majorName | String   | 选课是否开放 |
+
+接口示例
+
+``` javascript
+{
+    "code" : 200,
+    "msg" : "succ",
+    "data":{
+        "open": "true",
+    }
+}
+```
+
+#### 4.3修改专业信息
+
+接口功能
+
+> 获取本专业的可选课程
+
+URL
+
+> /student/updateMajorInfo
+
+HTTP请求方式
+
+> POST
+
+请求参数
+
+注意携带好token
+
+> | 参数           | 必选 | 类型   |  说明  |
+> | :------------- | :--- | :----- | :----: |
+> | majorOldName   | ture | String | 学工号 |
+> | majorNewName   |      |        |        |
+> | introduction   |      |        |        |
+> | majorOldScool  |      |        |        |
+> | majorNewSchool |      |        |        |
+
+**成功登录**返回字段中data
+
+> | 返回字段  | 字段类型 | 说明         |
+> | :-------- | :------- | :----------- |
+> | majorName | String   | 选课是否开放 |
+
+接口示例
+
+``` javascript
+{
+    "code" : 200,
+    "msg" : "succ",
+    "data":{
+        "open": "true",
+    }
+}
+```
+
+#### 4.4删除专业信息
+
+接口功能
+
+> 获取本专业的可选课程
+
+URL
+
+> /student/updateMajorInfo
+
+HTTP请求方式
+
+> POST
+
+请求参数
+
+注意携带好token
+
+> | 参数      | 必选 | 类型   |  说明  |
+> | :-------- | :--- | :----- | :----: |
+> | majorName | ture | String | 学工号 |
+
+**成功登录**返回字段中data
+
+> | 返回字段  | 字段类型 | 说明         |
+> | :-------- | :------- | :----------- |
+> | majorName | String   | 选课是否开放 |
+
+接口示例
+
+``` javascript
+{
+    "code" : 200,
+    "msg" : "succ",
+    "data":{
+        "open": "true",
+    }
+}
+```
+
+#### 
+
 
 
