--- a/接口文档.md
+++ b/接口文档.md
@@ -250,51 +250,11 @@ HTTP请求方式
 
 ```
 
-#### 2.3询问选课是否开放
+#### 2.3获得可选课程
 
 接口功能
 
-> 询问选课是否开放
-
-URL
-
-> /student/askForLec
-
-HTTP请求方式
-
-> POST
-
-请求参数
-
-注意携带好token
-
-> | 参数  | 必选 | 类型   |  说明  |
-> | :---- | :--- | :----- | :----: |
-> | numer | ture | String | 学工号 |
-
-**成功登录**返回字段中data
-
-> | 返回字段 | 字段类型 | 说明         |
-> | :------- | :------- | :----------- |
-> | open     | String   | 选课是否开放 |
-
-接口示例
-
-``` javascript
-{
-    "code" : 200,
-    "msg" : "succ",
-    "data":{
-        "open": "true",
-    }
-}
-```
-
-#### 2.4获得可选课程
-
-接口功能
-
-> 获取本专业的可选课程
+> 获取本专业的可选课程，如果选课未开放，会提示选课未开放
 
 URL
 
@@ -312,7 +272,7 @@ HTTP请求方式
 > | :---- | :--- | :----- | :----: |
 > | numer | ture | String | 学工号 |
 
-**成功登录**返回字段中data
+返回字段中data有两个信息，total和records，records是一个一个数组
 
 > | 返回字段 | 字段类型 | 说明         |
 > | :------- | :------- | :----------- |
@@ -321,17 +281,22 @@ HTTP请求方式
 
 接口示例
 
-``` javascript
+``` json
 {
-    "code" : 200,
-    "msg" : "succ",
+    "code":200,
+    "msg":"succ",
     "data":{
-        "open": "true",
+        "total":4,
+        "records":[
+            {"courseId":1,"courseNumber":"111","courseName":"离散数学","teacherNum":"20302010","teacherName":"11","major":"信息","school":"计算机","classPeriod":"222","classroom":"11","creditHours":11,"credits":11,"capacity":11,"introduction":"11","courseStatus":null},
+            {"courseId":2,"courseNumber":"111","courseName":"哈哈哈","teacherNum":"20302011","teacherName":"111","major":"信息","school":"计算机","classPeriod":"111","classroom":"111","creditHours":111,"credits":111,"capacity":111,"introduction":"111","courseStatus":null},
+            {"courseId":3,"courseNumber":"123445","courseName":"线性代数","teacherNum":"20302010","teacherName":"张佳洵","major":"信息","school":"计算机","classPeriod":"123444","classroom":"21323","creditHours":21312321,"credits":32132131,"capacity":2321321,"introduction":"3213","courseStatus":null}
+        ]
     }
 }
 ```
 
-#### 2.5修改密码
+#### 2.4修改密码
 
 接口功能
 
@@ -378,6 +343,170 @@ HTTP请求方式
 
 
 ## 3.老师的操作
+
+#### 3.1获得基础个人信息
+
+接口功能
+
+> 获得老师除密码和身份外的大部分信息
+
+URL
+
+> /teacher/infomation
+
+HTTP请求方式
+
+> POST
+
+请求参数
+
+注意携带好token
+
+> | 参数  | 必选 | 类型   |  说明  |
+> | :---- | :--- | :----- | :----: |
+> | numer | ture | String | 学工号 |
+
+**成功登录**返回字段中data
+
+> | 返回字段 | 字段类型 | 说明 |
+> | :------- | :------- | :--- |
+> | number   | String   |      |
+> | name     | String   |      |
+> | idNum    |          |      |
+> | phoneNum |          |      |
+> | email    |          |      |
+> | school   |          |      |
+> | major    |          |      |
+
+接口示例
+
+``` javascript
+
+```
+
+#### 3.2维护基础个人信息
+
+接口功能
+
+> 修改部分个人信息
+
+URL
+
+> /teacher/maintainInfo
+
+HTTP请求方式
+
+> POST
+
+请求参数
+
+注意携带好token
+
+> | 参数     | 必选 | 类型   |  说明  |
+> | :------- | :--- | :----- | :----: |
+> | numer    | ture | String | 学工号 |
+> | phoneNum | ture | String | 手机号 |
+> | email    | ture | String |  邮箱  |
+
+**成功登录**返回字段中data
+
+> | 返回字段 | 字段类型 | 说明     |
+> | :------- | :------- | :------- |
+> | number   | String   | 学工号   |
+> | name     | String   | 姓名     |
+> | role     | String   | 身份     |
+> | idNum    | String   | 身份证   |
+> | phoneNum | String   | 电话号码 |
+> | email    | String   | 邮箱     |
+> | school   | String   | 院系     |
+> | major    | String   | 专业     |
+
+接口示例
+
+``` javascript
+
+```
+
+#### 3.4获得自己已经提交的申请
+
+接口功能
+
+> 老师获得自己已经提交的申请的信息
+
+URL
+
+> /student/findApplyPage
+
+HTTP请求方式
+
+> POST
+
+请求参数
+
+注意携带好token
+
+> | 参数  | 必选 | 类型   |  说明  |
+> | :---- | :--- | :----- | :----: |
+> | numer | ture | String | 学工号 |
+
+**成功登录**返回字段中data
+
+> | 返回字段 | 字段类型 | 说明         |
+> | :------- | :------- | :----------- |
+> | open     | String   | 选课是否开放 |
+> |          |          |              |
+
+接口示例
+
+``` javascript
+{
+    "code" : 200,
+    "msg" : "succ",
+    "data":{
+        "open": "true",
+    }
+}
+```
+
+#### 3.5修改密码
+
+接口功能
+
+> 修改密码
+
+URL
+
+> /student/changePassword
+
+HTTP请求方式
+
+> POST
+
+请求参数
+
+注意携带好token
+
+> | 参数        | 必选 | 类型   |  说明  |
+> | :---------- | :--- | :----- | :----: |
+> | numer       | ture | String | 学工号 |
+> | oldPassword | true | String |        |
+> | newPassword | true | String |        |
+
+**成功登录**返回字段中data
+
+> | 返回字段 | 字段类型 | 说明 |
+> | :------- | :------- | :--- |
+> | number   | 无       | 无   |
+
+接口示例
+
+``` javascript
+{
+    "code" : 200,
+    "msg" : "succ",
+    "data": null
+}
+```
 
 
 
@@ -552,7 +681,47 @@ HTTP请求方式
 }
 ```
 
-#### 
+#### 4.4删除专业信息
+
+接口功能
+
+> 获取本专业的可选课程
+
+URL
+
+> /admin/allSchool
+
+HTTP请求方式
+
+> POST
+
+请求参数
+
+注意携带好token
+
+> | 参数 | 必选 | 类型 | 说明 |
+> | :--- | :--- | :--- | :--: |
+> | 无   |      |      |      |
+
+**成功登录**返回字段中data
+
+> | 返回字段   | 字段类型 | 说明         |
+> | :--------- | :------- | :----------- |
+> | String数组 | String   | 选课是否开放 |
+
+接口示例
+
+``` javascript
+{
+    "code" : 200,
+    "msg" : "succ",
+    "data":{
+        "open": "true",
+    }
+}
+```
+
+
 
 
 
