完善了类图部分

--- a/实验报告.md
+++ b/实验报告.md
@@ -18,11 +18,33 @@
 
   #### 类图：
 
+  ![1a5c21b2485c555d726bc0ad924ca4e.png](https://s2.loli.net/2022/04/15/PZyH4uzFLeBxSbR.png)
+
+  ​		这是和数据库绑定的实体类类图。说明：Student和Teacher都与userAccount设置了单向一对一关系（在学生和老师方维护）。学院和专业(School、Major)，教学楼和教室(TeachingBuilding、Classroom)都设置了双向一对多(多对一)关系，并且一方使用mappedBy放弃维护。同时教师(Teaching)与课程(Course)以及课程申请(CourseApplying)都设置了单向一对多关系。Authority类则是记录整体权限的实体类，存入权限名(枚举类型)和权限值的键值对(此次只有选课权限)。
+
+  ![8eec93e76ef6dbf09868fb38d8a79f8.png](https://s2.loli.net/2022/04/15/8xdn7QbPIvCuNJr.png)
+
+  ​		这是repository类图，他们都继承了JpaRepository<T, ID>，为service层实现业务提供接口。
+
+  ![2c7e40e98b8882aa608dd8efdb5da12.png](https://s2.loli.net/2022/04/15/V13KHMz2SiEgnXR.png)
+
+  ​		这是service层接口的类图，其中软件包impl实现了这些接口。
+
+  ![5a92425003762e2edef192d493f0062.png](https://s2.loli.net/2022/04/15/nwl3ym5DQL1jvUc.png)
+
+  ​		这是controller层的类图，其通过调用service提供的接口完成前端的请求并返回result。
+
+  ​		此外，还有很多“数据包”类以及定义了枚举类型的类。
+
   #### 代码风格：
 
   后端：总体来说，具有较好的代码风格，类名使用大驼峰命名法，变量名与函数名使用小驼峰命名法，并且变量名的含义均明确。此外没有出现magic number。
 
   前端：前端每个部件都用div标签包装，同时几乎没有无用的数据，函数的命名也符合驼峰命名法的规则，总体来说，代码风格良好。
+
+  #### 测试用例：
+
+  
 
 - ## 问题及解决方案：
 
@@ -52,4 +74,4 @@
 
   张佳洵：
 
-  杨添淇：在双向一对多（多对一）关系中，最好（大多数情况）要在一方设置mappedBy ，以表示一方放弃维护。因为如果不这样的话，在一方remove一个多方对象，然后save，并不会删除多方数据，只会将其外键置空，若设置有不能为空，还会报错。所以总体看，大多数情况应该是要设置mappedBy，一方放弃维护的。
+  杨添淇：在双向一对多（多对一）关系中，最好（大多数情况）要在一方设置mappedBy ，以表示一方放弃维护。因为如果不这样的话，在一方remove一个多方对象，然后save，并不会删除多方数据，只会将其外键置空，若设置有不能为空，还会报错。所以总体看，大多数情况应该是要设置mappedBy，一方放弃维护的。外键使用得当能够帮助设计者简化工作，但是使用外键以及给其设定相关属性值时一定要谨慎，否则会造成难以预估的错误，不如不用。
