--- a/实验报告.md
+++ b/实验报告.md
@@ -4,7 +4,7 @@
 
   #### 前端：
 
-  ​	于康：
+  ​	于康：主要负责部分界面的搭建，数据的检查显示以及与后端的交互，前端权限控制等。
 
   ​	王骏飞：主要负责界面的设计以及增删改查的前后端对接，路由跳转等。
 
@@ -66,7 +66,7 @@
 
   #### 前端：
 
-  于康：
+  于康：本次lab中，前端开始使用vue框架，实现了与后端的分离。体验到element-plus的便捷性，但也感受到vue的“难上手”，在遇到某个问题时，在网上搜索的方法由于“过时”等原因无法解决，在这次lab中也多次遇到磕绊，特别是在前端路由权限的管理上，花费了一定的时间。对于vue3的学习还在继续，已经感受到组件化开发的作用，在之后的工程中希望对vue3的使用更加熟练。
 
   王骏飞：
 
