实验报告添加了打tag的图片

--- a/实验报告.md
+++ b/实验报告.md
@@ -76,15 +76,15 @@
 
 ## Tag截图：
 
-
-
-
+![lab3打tag.png](https://s2.loli.net/2022/04/15/FLPgrOc1zVHSYvs.png)
 
 ## 心得体会：
 
 #### 前端：
 
-于康：本次lab中，前端开始使用vue框架，实现了与后端的分离。体验到element-plus的便捷性，但也感受到vue的“难上手”，在遇到某个问题时，在网上搜索的方法由于“过时”等原因无法解决，在这次lab中也多次遇到磕绊，特别是在前端路由权限的管理上，花费了一定的时间。对于vue3的学习还在继续，已经感受到组件化开发的作用，在之后的工程中希望对vue3的使用更加熟练。
+于康：
+
+本次lab中，前端开始使用vue框架，实现了与后端的分离。体验到element-plus的便捷性，但也感受到vue的“难上手”，在遇到某个问题时，在网上搜索的方法由于“过时”等原因无法解决，在这次lab中也多次遇到磕绊，特别是在前端路由权限的管理上，花费了一定的时间。对于vue3的学习还在继续，已经感受到组件化开发的作用，在之后的工程中希望对vue3的使用更加熟练。
 
 王骏飞：
 
@@ -92,6 +92,10 @@
 
 #### 后端:
 
-张佳洵：预先的设计是非常重要的。如果预先没有设计好数据库，修改主键数量或者名字后会导致目前数据库中的数据作废，测试人员需要删库重新从最基本的管理员账号、院系、专业、老师开始导入，比较废时间。如果预先没有设计好所有的功能和接口，那么开发时就难以有完善的接口文档可以参考，前端人员和后端人员之间互相的打扰会比较多。
+张佳洵：
 
-杨添淇：在双向一对多（多对一）关系中，最好（大多数情况）要在一方设置mappedBy ，以表示一方放弃维护。因为如果不这样的话，在一方remove一个多方对象，然后save，并不会删除多方数据，只会将其外键置空，若设置有不能为空，还会报错。所以总体看，大多数情况应该是要设置mappedBy，一方放弃维护的。外键使用得当能够帮助设计者简化工作，但是使用外键以及给其设定相关属性值时一定要谨慎，否则会造成难以预估的错误，不如不用。
+预先的设计是非常重要的。如果预先没有设计好数据库，修改主键数量或者名字后会导致目前数据库中的数据作废，测试人员需要删库重新从最基本的管理员账号、院系、专业、老师开始导入，比较废时间。如果预先没有设计好所有的功能和接口，那么开发时就难以有完善的接口文档可以参考，前端人员和后端人员之间互相的打扰会比较多。
+
+杨添淇：
+
+在双向一对多（多对一）关系中，最好（大多数情况）要在一方设置mappedBy ，以表示一方放弃维护。因为如果不这样的话，在一方remove一个多方对象，然后save，并不会删除多方数据，只会将其外键置空，若设置有不能为空，还会报错。所以总体看，大多数情况应该是要设置mappedBy，一方放弃维护的。外键使用得当能够帮助设计者简化工作，但是使用外键以及给其设定相关属性值时一定要谨慎，否则会造成难以预估的错误，不如不用。
