修bug+实验报告

--- a/实验报告.md
+++ b/实验报告.md
@@ -88,6 +88,7 @@
 
 王骏飞：
 
+这次主要是要学习vue框架的使用以及对element的使用，一开始element并不是十分便捷，有时候还会经常显示不出来，后来熟练之后知道要把所有的函数和绑定都写好才可以。另外就是和后端的数据交互要保证接口和数据格式的正确性，否则会报错。
 
 
 #### 后端:
