--- a/实验报告.md
+++ b/实验报告.md
@@ -76,7 +76,7 @@
 
 ## Tag截图：
 
-![lab3打tag.png](https://s2.loli.net/2022/04/15/FLPgrOc1zVHSYvs.png)
+![lab3tag.png](https://s2.loli.net/2022/04/15/D4TQCGMYsl1phO8.png)
 
 ## 心得体会：
 
