增加了缺陷管理的描述

--- a/实验报告.md
+++ b/实验报告.md
@@ -44,11 +44,19 @@
 
 #### 测试用例：
 
-以下是我们自己设计的测试用例，具体测试过程略，均测试成功。
+以下是我们自己设计的测试用例，具体测试过程略，最终均测试成功。
 
 ![测试用例截图1.png](https://s2.loli.net/2022/04/15/dnbDm5sRVNSCKgy.png)
 
 ![测试用例截图1.png](https://s2.loli.net/2022/04/15/dnbDm5sRVNSCKgy.png)
+
+#### 缺陷管理：
+
+​		我们使用了华为云上的缺陷管理功能：由发现问题者创建，并在标题或简介中对所发现缺陷进行描述，然后指派给对应模块的负责人让其处理。由于我们小组在同一寝室，故很方便，直接口头通知即可。问题解决后处理人便修改缺陷状态为已解决，并可留下相关评论。
+
+![42a58ffadcd893ef33e4e3137b6e76b.png](https://s2.loli.net/2022/04/19/lQBwsEFLmn18gCf.png)
+
+![d007435dc3f71a83d1447a5e77b5ba3.png](https://s2.loli.net/2022/04/19/VYGeuw7cd1PoRHX.png)
 
 ## 问题及解决方案：
 
