--- a/实验报告.md
+++ b/实验报告.md
@@ -6,7 +6,7 @@
 
 ​	于康：主要负责部分界面的搭建，数据的检查显示以及与后端的交互，前端权限控制等。
 
-​	王骏飞：主要负责界面的设计以及增删改查的前后端对接，路由跳转等。
+​	王骏飞：主要负责界面的设计以及增删改查的前后端对接，路由跳转等，同时负责测试。
 
 #### 后端：
 
@@ -96,7 +96,7 @@
 
 王骏飞：
 
-这次主要是要学习vue框架的使用以及对element的使用，一开始element并不是十分便捷，有时候还会经常显示不出来，后来熟练之后知道要把所有的函数和绑定都写好才可以。另外就是和后端的数据交互要保证接口和数据格式的正确性，否则会报错。
+这次主要是在lab3的基础上增加了一些功能，首先是上次的lab有一些功能做的不完善，比如在课表设计这里，上次用的是填写的方式比较粗糙，这次则加入了表格可以用来选择，然后在选择组件的时候也遇到过一些困难，需要多次与后端的同学进行协商，用哪个组件，传递什么数据。可以看出沟通交流是很重要的。
 
 
 #### 后端:
