--- a/实验报告.md
+++ b/实验报告.md
@@ -4,7 +4,7 @@
 
 #### 前端：
 
-​	于康：主要负责部分界面的搭建，数据的检查显示以及与后端的交互，前端权限控制等。
+​	于康：主要负责部分界面的搭建，数据的检查显示以及与后端的交互，前端权限控制等。负责服务器部署
 
 ​	王骏飞：主要负责界面的设计以及增删改查的前后端对接，路由跳转等，同时负责测试。
 
@@ -42,17 +42,9 @@
 
 前端：前端每个部件都用div标签包装，同时几乎没有无用的数据，函数的命名也符合驼峰命名法的规则，总体来说，代码风格良好。
 
-#### 测试用例：
 
-以下是我们自己设计的测试用例，具体测试过程略，最终均测试成功。
 
-![测试用例截图1.png](https://s2.loli.net/2022/04/15/dnbDm5sRVNSCKgy.png)
 
-![测试用例截图1.png](https://s2.loli.net/2022/04/15/dnbDm5sRVNSCKgy.png)
-
-#### 缺陷管理：
-
-​		我们使用了华为云上的缺陷管理功能：由发现问题者创建，并在标题或简介中对所发现缺陷进行描述，然后指派给对应模块的负责人让其处理。由于我们小组在同一寝室，故很方便，直接口头通知即可。问题解决后处理人便修改缺陷状态为已解决，并可留下相关评论。
 
 ![42a58ffadcd893ef33e4e3137b6e76b.png](https://s2.loli.net/2022/04/19/lQBwsEFLmn18gCf.png)
 
@@ -82,9 +74,31 @@
 
 ![lab3代码检查结果.png](https://s2.loli.net/2022/04/15/y4NjJ9xKEadoz7X.png)
 
+## 软件测试
+
+#### 单元测试
+
+#### 系统测试
+
+#### 接口测试
+
+我们使用postman进行大部分相比lab3新添加的接口的测试。
+
+以管理员**维护上课时间段**这个场景为例，我们的流程是登录->添加上课时间段->获得所有时间->修改时间段信息->获得所有时间->删除时间段->获得所有时间，一共这样的流程。因为技术力有限，我们此次采用的是手工逐个点击，检验对应的效果是否正确。
+
+![postman.jpg](https://s2.loli.net/2022/05/21/FqHO6ti48x17DPn.png)
+
+## 缺陷管理
+
+​		我们使用了华为云上的缺陷管理功能：由发现问题者创建，并在标题或简介中对所发现缺陷进行描述，然后指派给对应模块的负责人让其处理。由于我们小组在同一寝室，故很方便，直接口头通知即可。问题解决后处理人便修改缺陷状态为已解决，并可留下相关评论。
+
+对于前端的一些仅限于交互友好性的缺陷，我们设置了比较低的优先级。对于后端的功能性问题，我们设置较高的优先级。
+
+![缺陷管理.png](https://s2.loli.net/2022/05/21/iLCuzVE2YfRsqjx.png)
+
 ## Tag截图：
 
-![lab3tag.png](https://s2.loli.net/2022/04/15/D4TQCGMYsl1phO8.png)
+
 
 ## 心得体会：
 
@@ -103,7 +117,9 @@
 
 张佳洵：
 
-预先的设计是非常重要的。如果预先没有设计好数据库，修改主键数量或者名字后会导致目前数据库中的数据作废，测试人员需要删库重新从最基本的管理员账号、院系、专业、老师开始导入，比较废时间。如果预先没有设计好所有的功能和接口，那么开发时就难以有完善的接口文档可以参考，前端人员和后端人员之间互相的打扰会比较多。
+①数据交互类的复用是需要注意的，很多时候我们后端单纯为了一个接口接受前端的数据(@RequestBody)， 就定义了一个类，而且复用得不好，比如我们有这样的几个类：学年+学期、学年+学期+search字符串，学年+学期+search+分页相关信息。复用不多导致我们为了数据交互而定义的类有些多，有些冗余。
+
+②学习使用自动化检测工具能够节约我们很多精力，比如postman，虽然目前仍然还有很多手工的地方，但是相比最原始的功能检测已经好了许多。
 
 杨添淇：
 
