--- a/实验报告.md
+++ b/实验报告.md
@@ -80,6 +80,16 @@
 
 #### 系统测试
 
+通过华为云的测试，把测试用例录入然后手动进行测试。测试用例的选择主要是根据文档的要求进行编写，最后都通过了测试。
+
+![image-20220521214336870](https://s2.loli.net/2022/05/21/WCRM4A6kIPH7ObQ.png)
+
+![image-20220521214354190](https://s2.loli.net/2022/05/21/nUoyIEeJrRLQ5b9.png)
+
+![image-20220521214402883](https://s2.loli.net/2022/05/21/ZmLKD5jwQOeAs4I.png)
+
+![image-20220521214410657](https://s2.loli.net/2022/05/21/QkMFYuVyG8ianOE.png)
+
 #### 接口测试
 
 我们使用postman进行大部分相比lab3新添加的接口的测试。
