--- a/实验报告.md
+++ b/实验报告.md
@@ -116,7 +116,7 @@
 
 于康：
 
-本次lab中，前端开始使用vue框架，实现了与后端的分离。体验到element-plus的便捷性，但也感受到vue的“难上手”，在遇到某个问题时，在网上搜索的方法由于“过时”等原因无法解决，在这次lab中也多次遇到磕绊，特别是在前端路由权限的管理上，花费了一定的时间。对于vue3的学习还在继续，已经感受到组件化开发的作用，在之后的工程中希望对vue3的使用更加熟练。
+随着功能需求的增多，本次lab
 
 王骏飞：
 
