--- a/实验报告.md
+++ b/实验报告.md
@@ -18,21 +18,33 @@
 
 #### 类图：
 
-![1a5c21b2485c555d726bc0ad924ca4e.png](https://s2.loli.net/2022/04/15/PZyH4uzFLeBxSbR.png)
+![74c73d09f86bee13da8861d9587b22f.png](https://s2.loli.net/2022/05/21/tuYzkfTieb3pW6v.png)
 
-​		这是和数据库绑定的实体类类图。说明：Student和Teacher都与userAccount设置了单向一对一关系（在学生和老师方维护）。学院和专业(School、Major)，教学楼和教室(TeachingBuilding、Classroom)都设置了双向一对多(多对一)关系，并且一方使用mappedBy放弃维护。同时教师(Teaching)与课程(Course)以及课程申请(CourseApplying)都设置了单向一对多关系。Authority类则是记录整体权限的实体类，存入权限名(枚举类型)和权限值的键值对(此次只有选课权限)。
+​		这是和数据库绑定的实体类类图。说明：Student和Teacher都与userAccount设置了单向一对一关系（在学生和老师方维护）。学院和专业(School、Major)，教学楼和教室(TeachingBuilding、Classroom)都设置了双向一对多(多对一)关系，并且一方使用mappedBy放弃维护。同时教师(Teaching)与课程(Course)以及课程申请(CourseApplying)都设置了单向一对多关系。此外，有选课记录类CourseSelectingRecord，其与学生和课程都维护了双向多对一关系，并在一方使用mappedBy放弃维护看，即手动实现了一个多对多关系。Authority类则是记录整体权限的实体类，存入权限名(枚举类型)和权限值的键值对。
 
-![8eec93e76ef6dbf09868fb38d8a79f8.png](https://s2.loli.net/2022/04/15/8xdn7QbPIvCuNJr.png)
+
+
+![969e70517c0d0a8ec85f48f666bcf3a.png](https://s2.loli.net/2022/05/21/JeupWl3bVsIGnND.png)
 
 ​		这是repository类图，他们都继承了JpaRepository<T, ID>，为service层实现业务提供接口。
 
-![2c7e40e98b8882aa608dd8efdb5da12.png](https://s2.loli.net/2022/04/15/V13KHMz2SiEgnXR.png)
 
-​		这是service层接口的类图，其中软件包impl实现了这些接口。
 
-![5a92425003762e2edef192d493f0062.png](https://s2.loli.net/2022/04/15/nwl3ym5DQL1jvUc.png)
+![7247fe329de50fa342c57ebc43f5535.png](https://s2.loli.net/2022/05/21/f7tvPmXblRcTn1z.png)
+
+​		这是impl软件包中service层接口的实现类。
+
+
+
+![d9b1fb83e344ed666aac9f5a9df750a.png](https://s2.loli.net/2022/05/21/uOy3oxBCtSsVUD4.png)
 
 ​		这是controller层的类图，其通过调用service提供的接口完成前端的请求并返回result。
+
+
+
+![b6515163c74f39ec25bb4a54b4a8206.png](https://s2.loli.net/2022/05/21/gmSJ81zovs7WhFQ.png)
+
+​		这是工具类包中定义的工具类。
 
 ​		此外，还有很多“数据包”类以及定义了枚举类型的类。
 
@@ -78,6 +90,10 @@
 
 #### 单元测试
 
+本次新添功能主要在CourseSelectingService中实现，故对其中的核心功能函数进行单元测试，检查结果及输出的Hibernate语句，均正确。
+
+![c59dab8c0a12962c0705907b6e72168.png](https://s2.loli.net/2022/05/21/MSXaNECqfQVYcGF.png)
+
 #### 系统测试
 
 通过华为云的测试，把测试用例录入然后手动进行测试。测试用例的选择主要是根据文档的要求进行编写，最后都通过了测试。
@@ -116,7 +132,7 @@
 
 于康：
 
-随着功能需求的增多，本次lab
+本次lab中，前端开始使用vue框架，实现了与后端的分离。体验到element-plus的便捷性，但也感受到vue的“难上手”，在遇到某个问题时，在网上搜索的方法由于“过时”等原因无法解决，在这次lab中也多次遇到磕绊，特别是在前端路由权限的管理上，花费了一定的时间。对于vue3的学习还在继续，已经感受到组件化开发的作用，在之后的工程中希望对vue3的使用更加熟练。
 
 王骏飞：
 
@@ -133,4 +149,7 @@
 
 杨添淇：
 
-在双向一对多（多对一）关系中，最好（大多数情况）要在一方设置mappedBy ，以表示一方放弃维护。因为如果不这样的话，在一方remove一个多方对象，然后save，并不会删除多方数据，只会将其外键置空，若设置有不能为空，还会报错。所以总体看，大多数情况应该是要设置mappedBy，一方放弃维护的。外键使用得当能够帮助设计者简化工作，但是使用外键以及给其设定相关属性值时一定要谨慎，否则会造成难以预估的错误，不如不用。
+①JPA没有提供对多对多关系中间表的便利操作，经过实践，我选择了手动写一个中间表实体类并让其与多对多的双方各维护一个双向多对一关系(并且在一方，即多对多的双方使用mappedBy放弃维护)，这样，无论是直接对中间表进行操作还是想添加额外字段都十分方便。
+
+②本次lab我首次在实际工程中运用了算法知识，感到对现实工程项目中算法可能的应用方式有了一些遐想和感悟。在实现”可以根据课程代码、课程名称、教师模糊搜索课程“的功能中，需要对搜素结果进行排序，但由于多个结果的匹配对象(课程代码、课程名称、教师)可能不同，如何定义大于小于关系等，我难以找到合适的可以供我调用的现成的库。于是我便自己定义了相关性实现了比较相关性的函数，利用它定义大于小于关系，并简单使用了一个插入排序来对结果进行整理。
+
