--- a/实验报告.md
+++ b/实验报告.md
@@ -4,7 +4,7 @@
 
 #### 前端：
 
-​	于康：主要负责部分界面的搭建，数据的检查显示以及与后端的交互，前端权限控制等。负责服务器部署
+​	于康：主要负责部分界面的搭建，数据的检查显示以及与后端的交互，前端权限控制；负责服务器部署。
 
 ​	王骏飞：主要负责界面的设计以及增删改查的前后端对接，路由跳转等，同时负责测试。
 
@@ -64,23 +64,11 @@
 
 ## 问题及解决方案：
 
-##### 1.前端传给后端数据的代码格式问题：
+##### 1.VUE2和VUE3的选择问题
 
-因为我们本次代码相对于lab2基本上是推翻重来，前端改用了Vue框架，前后端交互出现了一些问题。之前可以使用的@RequestParm注解无法捕捉到前端传给后端的参数（网上的说法是和JSON格式或者表单有关，我们没有想清为什么），后端暂时只能使用@RequestBody注解接受前端传递的数据，这就涉及到数据包不包装的问题，导致我们传数据的格式其实不是非常统一，
+在Lab3时首次使用了VUE框架，当时在未具体了解时直接选择了最新的VUE3，VUE3的新写法造成了我们使用Element-plus的困难，VUE3的新特性也导致了在遇到问题时的难以搜索（搜索结果更常遇到VUE2的相关情形），交付完Lab3后，我们在VUE2和VUE3的选择上进行了讨论：更换为VUE2，或许可以更为灵活方便地使用，进行更多地复用，但同时也要承担更换中的付出。
 
-传过去数据有几种格式：单独传一个数据；带有说明的数据，（如id：this.id）,打包后的数据，如果格式不匹配会导致后端接收不到数据，或者是收到空数据。
-
-解决方案：和后端商量好要传过去的数据的格式，如果格式特殊，要特别强调。
-
-##### 2.如果一个element的表单和一个打包起来的数据绑定，那么必须要给这个打包起来的数据里的每一个数据都进行修改，否则会导致无法传递。
-
-解决方案：要注意必须把每一个值都有一个input，可以选择不可编辑或者不显示，但是必须要有。
-
-##### 3.接口文档的更新速度跟不上我们的开发速度
-
-造成这个问题的主要原因是我们并没有进行充分的预先设计，是边开发边设计边决定接口的，而不是先决定好所有的接口然后再前后端非常独立地进行开发。而且我们对于接口文档的格式暂时没有摸索出特别好的方式来，手动模拟JOSN格式的数据也比较慢（也许腾讯文档更适合，像这次一样放在代码仓库里的话每次都要push和pull挺麻烦）。
-
-解决方式：利用寝室里线下交流方便的优势，线下直接画接口草图交流，虽然粗糙，但是的确解决了我们没有很多时间细细梳理需求和接口的问题。
+解决方式：考虑到教务系统的布局，更换为VUE2后，可能也不会有非常好的方案，反而增加实现上的繁琐性；另一方面，我们更加了解了VUE3的写法，同时对VUE2中的用法更为熟练，所以Element-plus的使用也没有障碍。最终我们决定继续进行VUE3的学习，使用VUE3框架。
 
 ## 代码检查结果：
 
@@ -132,7 +120,7 @@
 
 于康：
 
-本次lab中，前端开始使用vue框架，实现了与后端的分离。体验到element-plus的便捷性，但也感受到vue的“难上手”，在遇到某个问题时，在网上搜索的方法由于“过时”等原因无法解决，在这次lab中也多次遇到磕绊，特别是在前端路由权限的管理上，花费了一定的时间。对于vue3的学习还在继续，已经感受到组件化开发的作用，在之后的工程中希望对vue3的使用更加熟练。
+随着功能需求的增多，本次lab首先将VUE组件按管理员、教师、学生进行了分类，同时完善分解了lab3的功能组件，避免了单个组件过于复杂，整体更有条理；对于element-plus的使用更为熟练，部分新功能的前端实现相较上次轻松了些；第一次尝试项目的部署，虽然过程中遇到了一些问题，但更多的还是兴奋情绪，尤其是最后成功访问到教务管理系统。
 
 王骏飞：
 
