完善实验报告

--- a/实验报告.md
+++ b/实验报告.md
@@ -56,12 +56,6 @@
 
 
 
-
-
-![42a58ffadcd893ef33e4e3137b6e76b.png](https://s2.loli.net/2022/04/19/lQBwsEFLmn18gCf.png)
-
-![d007435dc3f71a83d1447a5e77b5ba3.png](https://s2.loli.net/2022/04/19/VYGeuw7cd1PoRHX.png)
-
 ## 问题及解决方案：
 
 ##### 1.VUE2和VUE3的选择问题
@@ -70,9 +64,23 @@
 
 解决方式：考虑到教务系统的布局，更换为VUE2后，可能也不会有非常好的方案，反而增加实现上的繁琐性；另一方面，我们更加了解了VUE3的写法，同时对VUE2中的用法更为熟练，所以Element-plus的使用也没有障碍。最终我们决定继续进行VUE3的学习，使用VUE3框架。
 
+##### 2.部署到服务器上以后，出bug不容易定位。
+
+不像本地运行的时候修改和重新run比较快。简单地修改两个e.printStackTrace()再重新部署费时费力。
+
+解决方案：保持项目的本地可运行性，在本地debug，解决bug再部署到服务器，减少部署服务器的次数。
+
+##### 3.对于需求的理解需要尽早完成
+
+比如什么是同类课程，什么是同一课程，进行定义。同时需求的理解也涉及到数据库的设计，数据库级的每次变更都可能导致需要删库重新补充数据，很累。本次lab我们仍然使用了外键而没有使用uuid，这也许会成为我们向微服务演进时的阻碍。
+
+处理方案：在开发的早期，进行协作编程，两个后端的同学在交流的过程中更加深入地明确对需求的理解。
+
 ## 代码检查结果：
 
-![lab3代码检查结果.png](https://s2.loli.net/2022/04/15/y4NjJ9xKEadoz7X.png)
+![质量门禁.png](https://s2.loli.net/2022/05/21/rNA35VakIbl2ipw.png)
+
+![健康度检查.png](https://s2.loli.net/2022/05/21/KxbvOanGqEDcloX.png)
 
 ## 软件测试
 
@@ -102,6 +110,12 @@
 
 ![postman.jpg](https://s2.loli.net/2022/05/21/FqHO6ti48x17DPn.png)
 
+## 代码评审
+
+本次lab的开发阶段，我们前端和后端各自开了一个分支，独立开发。在完成较多内容后实行**分支合并**的时候进行代码评审。评审时会有线下面对面的交流，并在检视意见里面写清楚还遗留的问题。
+
+![评审几率.png](https://s2.loli.net/2022/05/21/9OoaJkcVMGBuzEZ.png)
+
 ## 缺陷管理
 
 ​		我们使用了华为云上的缺陷管理功能：由发现问题者创建，并在标题或简介中对所发现缺陷进行描述，然后指派给对应模块的负责人让其处理。由于我们小组在同一寝室，故很方便，直接口头通知即可。问题解决后处理人便修改缺陷状态为已解决，并可留下相关评论。
@@ -112,7 +126,7 @@
 
 ## Tag截图：
 
-
+![git打tag.png](https://s2.loli.net/2022/05/21/AwXiCpJ6KE7mxDj.png)
 
 ## 心得体会：
 
